@@ -75,6 +75,8 @@ it from source control: http://www.mediawiki.org/wiki/Download_from_SVN
 * (bug 22867) "View source" tab is now only displayed if there's source text
 * (bug 19393) Feeds now format dates in user language rather than content
   language
+* (bug 22852) "Served in" comment is now the time used to cache a single page
+  when using rebuildFileCache.php
 
 === API changes in 1.17 ===
 * (bug 22738) Allow filtering by action type on query=logevent
